--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.18",
     "framer-motion": "^10.16.0",
+    "googleapis": "^126.0.0",
     "next": "13.4.18",
+    "nextjs-toploader": "^1.4.2",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.28",
     "react": "18.2.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
-    "@types/nodemailer": "^6.4.9"
+    "@types/nodemailer": "^6.4.9",
+    "next-auth": "^4.23.1"
   }
 }
