--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ OAUTH_CLIENT_KEY=
 OAUTH_CLIENT_SECRET=
 NEXTAUTH_URL=
 JWT_SECRET=
+NEXT_PUBLIC_DATABASE_URL=
+NEXT_PUBLIC_DATABASE_USERNAME=
+NEXT_PUBLIC_DATABASE_PASSWORD=
