--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/nodemailer": "^6.4.9",
-    "next-auth": "^4.23.1"
+    "next-auth": "^4.23.1",
+    "prisma": "^5.1.1"
   }
 }
