--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -25,13 +25,16 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "@types/nodemailer": "^6.4.9",
+    "daisyui": "^3.5.1",
     "next-auth": "^4.23.1",
-    "prisma": "^5.1.1"
+    "prisma": "^5.1.1",
+    "swr": "^2.2.1"
   }
 }
